# Central_Dogma_AI

./: .gitignore  README.md  generator_test.ipynb  pyproject.toml
checkpoints/: dna_adaptive_tokenizer_best.pt
docs/: soft_canvas_handoff.md
notebooks/: dna_adaptive_tokenizer_playground.ipynb  dna_single_token_manifold_diagnostics.ipynb  phase_track_checkpoint_visualisation.ipynb  synthetic_splice_transducer_training.ipynb
scripts/: benchmark_bipangolin_same_val.py  dna_adaptive_tokenizer_autoencoder.py  dna_adaptive_tokenizer_manifold_autoencoder.py  dna_autoencoder.py  dna_causal_conv_autoencoder.py  dna_fast_seqprop_softpack_design.py  dna_multitoken_curriculum_autoencoder.py  dna_multitoken_span_curriculum_autoencoder.py  dna_segmental_softpack_autodecoder.py  dna_segmental_softpack_autoencoder.py  dna_single_token_entropy_curriculum_autoencoder.py  dna_transformer_soft_autoencoder.py  goated.sh  plot_dense_transition_phase_helper_checkpoint.py  plot_phase_track_checkpoint.py  plot_predictions.py  plot_predictions_attention_extra_positional.py  plot_predictions_attention_extra_positional_utr_introns.py  plot_predictions_attention_extra_positional_utr_introns_local_conv.py  plot_predictions_forward_backward.py  plot_predictions_stacked.py  plot_structured_phase_helper_checkpoint.py  run_exist_transformer_splice_cluster.sh  run_mamba_splice_3class_big_cluster.sh  run_mamba_splice_3class_calibrated_head_cluster.sh  run_mamba_splice_3class_cluster.sh  run_mamba_splice_3class_hierconv_cluster.sh  run_mamba_splice_3class_weight_curriculum_cluster.sh  (+56 more)
(+21 files in other folders)
